parser: Accept comma-separated list in case-statements of switchs
  switch (i) {
  case 0, 1, 2:
    break;
  }

https://bugzilla.gnome.org/show_bug.cgi?id=614015

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -315,6 +315,7 @@ TESTS = \
 	annotations/deprecated.vala \
 	annotations/description.vala \
 	annotations/noaccessormethod.test \
+	parser/switch-statement.vala \
 	$(NULL)
 
 NON_NULL_TESTS = \
