Fix side-effects in array element assignments
Make sure to not evaluate the index multiple times.

Fixes bug 632322.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -23,6 +23,7 @@ TESTS = \
 	basic-types/bug595751.vala \
 	basic-types/bug596637.vala \
 	basic-types/bug596785.vala \
+	basic-types/bug632322.vala \
 	namespaces.vala \
 	methods/lambda.vala \
 	methods/closures.vala \
