--- a/configure.in
+++ b/configure.in
@@ -25,8 +25,8 @@ AM_CONDITIONAL(ENABLE_VALADOCORG, test x$enable_valadocorg = xyes)
 
 
 
-VALA_PACKAGE=vala-0.10
-LIBVALA_REQUIRED=0.10.0
+VALA_PACKAGE=libvala-0.12
+LIBVALA_REQUIRED=0.11.0
 LIBGEE_REQUIRED=0.5
 LIBGVC_REQUIRED=2.16
 GLIB_REQUIRED=2.12.0
