vala: Add common Callable interface for Method, Delegate and Signal.
https://bugzilla.gnome.org/show_bug.cgi?id=639124

--- a/vala/Makefile.am
+++ b/vala/Makefile.am
@@ -32,6 +32,7 @@ libvalacore_la_VALASOURCES = \
 	valabooleanliteral.vala \
 	valabooleantype.vala \
 	valabreakstatement.vala \
+	valacallable.vala \
 	valacastexpression.vala \
 	valacatchclause.vala \
 	valacharacterliteral.vala \
