Add test for closures in async methods

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -90,6 +90,7 @@ TESTS = \
 	asynchronous/bug613484.vala \
 	asynchronous/bug620740.vala \
 	asynchronous/bug639591.vala \
+	asynchronous/closures.vala \
 	dbus/basic-types.test \
 	dbus/arrays.test \
 	dbus/structs.test \
