Add test for throwing errors from catch clauses

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -77,6 +77,7 @@ TESTS = \
 	errors/bug579101.vala \
 	errors/bug596228.vala \
 	errors/bug623049.vala \
+	errors/bug639589.vala \
 	asynchronous/bug595735.vala \
 	asynchronous/bug595755.vala \
 	asynchronous/bug596177.vala \
