--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -72,6 +72,7 @@ TESTS = \
 	objects/bug613486.vala \
 	objects/bug620706.vala \
 	objects/bug624594.vala \
+	objects/bug628639.vala \
 	errors/errors.vala \
 	errors/bug567181.vala \
 	errors/bug579101.vala \
