codegen: Copy the delegate target when copying structs
Fixes bug 639751.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -54,6 +54,7 @@ TESTS = \
 	delegates/delegates.vala \
 	delegates/bug595610.vala \
 	delegates/bug595639.vala \
+	delegates/bug639751.vala \
 	objects/classes.vala \
 	objects/fields.vala \
 	objects/interfaces.vala \
