--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -123,6 +123,7 @@ TESTS = \
 	asynchronous/bug595735.vala \
 	asynchronous/bug595755.vala \
 	asynchronous/bug596177.vala \
+	asynchronous/bug596861.vala \
 	asynchronous/bug597294.vala \
 	asynchronous/bug598677.vala \
 	asynchronous/bug598697.vala \
