--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -52,6 +52,7 @@ TESTS = \
 	structs/bug606202.vala \
 	structs/bug613513.vala \
 	structs/bug613825.vala \
+	structs/bug621176.vala \
 	structs/bug622422.vala \
 	delegates/delegates.vala \
 	delegates/bug595610.vala \
