--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -57,6 +57,7 @@ TESTS = \
 	delegates/delegates.vala \
 	delegates/bug595610.vala \
 	delegates/bug595639.vala \
+	delegates/bug638415.vala \
 	delegates/bug639751.vala \
 	objects/classes.vala \
 	objects/fields.vala \
