Always set value_owned to false for pointers
Fixes bug 650993.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -25,6 +25,7 @@ TESTS = \
 	basic-types/bug596637.vala \
 	basic-types/bug596785.vala \
 	basic-types/bug632322.vala \
+	basic-types/bug650993.vala \
 	namespaces.vala \
 	methods/lambda.vala \
 	methods/closures.vala \
