--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -88,6 +88,7 @@ TESTS = \
 	errors/bug596228.vala \
 	errors/bug623049.vala \
 	errors/bug639589.vala \
+	errors/bug651145.vala \
 	asynchronous/bug595735.vala \
 	asynchronous/bug595755.vala \
 	asynchronous/bug596177.vala \
