--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -82,6 +82,7 @@ TESTS = \
 	objects/bug624594.vala \
 	objects/bug628639.vala \
 	objects/bug642809.vala \
+	objects/bug643711.vala \
 	errors/errors.vala \
 	errors/bug567181.vala \
 	errors/bug579101.vala \
