--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -36,6 +36,7 @@ TESTS = \
 	methods/bug599892.vala \
 	methods/bug613483.vala \
 	methods/bug620673.vala \
+	methods/bug642899.vala \
 	methods/bug646345.vala \
 	methods/bug648320.vala \
 	control-flow/break.vala \
