--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -57,6 +57,7 @@ TESTS = \
 	structs/bug613825.vala \
 	structs/bug621176.vala \
 	structs/bug622422.vala \
+	structs/bug651441.vala \
 	delegates/delegates.vala \
 	delegates/bug595610.vala \
 	delegates/bug595639.vala \
