--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -120,6 +120,7 @@ TESTS = \
 	dbus/filedescriptor.test \
 	dbus/bug596862.vala \
 	dbus/bug602003.test \
+	gir/bug651773.test \
 	$(NULL)
 
 check-TESTS: $(TESTS)
