Support explicit interface methods implementation
Fixes bug 652098

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -54,6 +54,7 @@ TESTS = \
 	methods/bug646345.vala \
 	methods/bug648320.vala \
 	methods/bug649562.vala \
+	methods/bug652098.vala \
 	methods/bug653391.vala \
 	methods/bug653908.vala \
 	methods/bug663210.vala \
