GAsync: Support generic types in async methods
Fixes bug 653861.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -123,6 +123,7 @@ TESTS = \
 	asynchronous/bug641182.vala \
 	asynchronous/bug646945.vala \
 	asynchronous/bug652252.vala \
+	asynchronous/bug653861.vala \
 	asynchronous/closures.vala \
 	dbus/basic-types.test \
 	dbus/arrays.test \
