GAsync: Fix generating finish method for generic async methods
Fixes bug 654336.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -125,6 +125,7 @@ TESTS = \
 	asynchronous/bug646945.vala \
 	asynchronous/bug652252.vala \
 	asynchronous/bug653861.vala \
+	asynchronous/bug654336.vala \
 	asynchronous/closures.vala \
 	dbus/basic-types.test \
 	dbus/arrays.test \
