Fix explicit cast of instance method access to a delegate type
Fixes bug 539166.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -68,6 +68,7 @@ TESTS = \
 	structs/bug623092.vala \
 	structs/bug651441.vala \
 	delegates/delegates.vala \
+	delegates/bug539166.vala \
 	delegates/bug595610.vala \
 	delegates/bug595639.vala \
 	delegates/bug638415.vala \
