Add test framework

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,6 +4,13 @@ NULL =
 
 
 SUBDIRS = src \
+          tests \
           icons \
           doc \
           $(NULL)
+
+
+.PHONY: test
+test:
+	cd tests && $(MAKE) $(AM_MAKEFLAGS) check
+
