--- a/configure.in
+++ b/configure.in
@@ -68,6 +68,7 @@ AC_CONFIG_FILES([Makefile
                  src/doclets/htm/Makefile
                  src/doclets/devhelp/Makefile
                  src/doclets/gtkdoc/Makefile
-                 src/valadoc/Makefile])
+                 src/valadoc/Makefile
+                 tests/Makefile])
 
 AC_OUTPUT
