--- a/src/libvaladoc/valadoc-1.0.pc.in
+++ b/src/libvaladoc/valadoc-1.0.pc.in
@@ -9,6 +9,6 @@ vapidir=@datadir@/vala/vapi
 Name: Valadoc
 Description: The Vala documentation compiler library
 Version: @VERSION@
-Requires: vala-1.0 libgvc
+Requires: @VALA_PACKAGE@ libgvc gee-1.0 gmodule-2.0
 Libs: -L${libdir} -lvaladoc
 Cflags: -I${includedir}/valadoc-1.0
