glib-2.0: Set lvalue_access to false for va_list
Fixes bug 654646.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -67,6 +67,7 @@ TESTS = \
 	structs/bug622422.vala \
 	structs/bug623092.vala \
 	structs/bug651441.vala \
+	structs/bug654646.vala \
 	delegates/delegates.vala \
 	delegates/bug539166.vala \
 	delegates/bug595610.vala \
