codegen: Support gobject-style chainup to base class that has generics
Fixes bug 654702.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -102,6 +102,7 @@ TESTS = \
 	objects/bug642809.vala \
 	objects/bug643711.vala \
 	objects/bug653138.vala \
+	objects/bug654702.vala \
 	errors/errors.vala \
 	errors/bug567181.vala \
 	errors/bug579101.vala \
