--- a/vapi/Makefile.am
+++ b/vapi/Makefile.am
@@ -233,3 +233,15 @@ dist_vapi_DATA = \
 dist_noinst_DATA = \
 	config.vapi \
 	$(NULL)
+
+.PHONY: clutter-1.0 json-glib-1.0
+
+VAPIGEN = $(top_builddir)/vapigen/vapigen
+METADATADIR = $(srcdir)/metadata
+GIRDIR = $$($(PKG_CONFIG) gobject-introspection-1.0 --variable=girdir)
+
+clutter-1.0:
+	$(VAPIGEN) --library $(srcdir)/clutter-1.0 --metadatadir $(METADATADIR) $(METADATADIR)/Clutter-1.0-custom.vala --pkg atk --pkg cairo --pkg pango --pkg cogl-1.0 --pkg json-glib-1.0 $(GIRDIR)/Clutter-1.0.gir
+
+json-glib-1.0:
+	$(VAPIGEN) --library $(srcdir)/json-glib-1.0 --metadatadir $(METADATADIR) $(METADATADIR)/Json-1.0-custom.vala --pkg gio-2.0 $(GIRDIR)/Json-1.0.gir
