driver/0.13.x: Add ChildSymbolRegistrar

--- a/src/driver/0.13.x/Makefile.am
+++ b/src/driver/0.13.x/Makefile.am
@@ -27,6 +27,7 @@ doclet_LTLIBRARIES =  \
 
 libdriver_la_VALASOURCES = \
 	initializerbuilder.vala \
+	childsymbolregistrar.vala \
 	symbolresolver.vala \
 	treebuilder.vala \
 	driver.vala \
