--- a/src/driver/Makefile.am
+++ b/src/driver/Makefile.am
@@ -3,8 +3,17 @@
 NULL =
 
 
+if HAVE_LIBVALA_0_12
+DRIVER_0_12_X_DIR = 0.12.x
+endif
+
+if HAVE_LIBVALA_0_13
+DRIVER_0_13_X_DIR = 0.13.x
+endif
+
 SUBDIRS = \
-	0.13.x \
+	$(DRIVER_0_12_X_DIR) \
+	$(DRIVER_0_13_X_DIR) \
 	$(NULL)
 
 
