--- a/src/driver/Makefile.am
+++ b/src/driver/Makefile.am
@@ -2,6 +2,9 @@
 
 NULL =
 
+if HAVE_LIBVALA_0_11_X
+DRIVER_0_11_X_DIR = 0.11.x
+endif
 
 if HAVE_LIBVALA_0_12
 DRIVER_0_12_X_DIR = 0.12.x
@@ -12,6 +15,7 @@ DRIVER_0_13_X_DIR = 0.13.x
 endif
 
 SUBDIRS = \
+	$(DRIVER_0_11_X_DIR) \
 	$(DRIVER_0_12_X_DIR) \
 	$(DRIVER_0_13_X_DIR) \
 	$(NULL)
