--- a/configure.in
+++ b/configure.in
@@ -76,6 +76,12 @@ AC_SUBST(LIBVALA_0_11_X_CFLAGS)
 AC_SUBST(LIBVALA_0_11_X_LIBS)
 
 
+PKG_CHECK_MODULES(LIBVALA_0_11_0, libvala-0.12 = 0.11.0, have_libvala_0_11_0="yes", have_libvala_0_11_0="no")
+AM_CONDITIONAL(HAVE_LIBVALA_0_11_0, test "$have_libvala_0_11_0" = "yes")
+AC_SUBST(LIBVALA_0_11_0_CFLAGS)
+AC_SUBST(LIBVALA_0_11_0_LIBS)
+
+
 
 AC_CONFIG_FILES([Makefile
                  src/libvaladoc/valadoc-1.0.pc
@@ -85,6 +91,7 @@ AC_CONFIG_FILES([Makefile
                  doc/Makefile
                  src/libvaladoc/Makefile
                  src/driver/Makefile
+				 src/driver/0.11.0/Makefile
 				 src/driver/0.11.x/Makefile
 				 src/driver/0.12.x/Makefile
 				 src/driver/0.13.x/Makefile
