--- a/configure.in
+++ b/configure.in
@@ -10,8 +10,8 @@ AM_INIT_AUTOMAKE([foreign])
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 
 AC_PROG_CC
+AM_DISABLE_STATIC
 AC_PROG_LIBTOOL
-
 
 
 ##
