--- a/vapi/Makefile.am
+++ b/vapi/Makefile.am
@@ -113,6 +113,8 @@ dist_vapi_DATA = \
 	gtkmozembed.vapi \
 	gtksourceview-2.0.deps \
 	gtksourceview-2.0.vapi \
+	gtksourceview-3.0.deps \
+	gtksourceview-3.0.vapi \
 	gudev-1.0.deps \
 	gudev-1.0.vapi \
 	hal.deps \
@@ -234,7 +236,7 @@ dist_noinst_DATA = \
 	config.vapi \
 	$(NULL)
 
-BINDINGS = clutter-1.0 json-glib-1.0 libsoup-2.4 libpeas-1.0 vte-2.90
+BINDINGS = clutter-1.0 gtksourceview-3.0 json-glib-1.0 libsoup-2.4 libpeas-1.0 vte-2.90
 VAPIGEN = $(top_builddir)/vapigen/vapigen
 METADATADIR = $(srcdir)/metadata
 GIRDIR = $$($(PKG_CONFIG) gobject-introspection-1.0 --variable=girdir)
@@ -245,6 +247,9 @@ all-bindings: $(BINDINGS)
 
 clutter-1.0:
 	$(VAPIGEN) --library $(srcdir)/clutter-1.0 --metadatadir $(METADATADIR) $(METADATADIR)/Clutter-1.0-custom.vala --pkg atk --pkg cairo --pkg pango --pkg cogl-1.0 --pkg json-glib-1.0 $(GIRDIR)/Clutter-1.0.gir
+
+gtksourceview-3.0:
+	$(VAPIGEN) --library gtksourceview-3.0 --pkg atk --pkg gdk-3.0 --pkg gdk-pixbuf-2.0 --pkg gio-2.0 --pkg gtk+-3.0 --pkg pango --pkg cairo --metadatadir $(METADATADIR) $(GIRDIR)/GtkSource-3.0.gir
 
 json-glib-1.0:
 	$(VAPIGEN) --library $(srcdir)/json-glib-1.0 --metadatadir $(METADATADIR) $(METADATADIR)/Json-1.0-custom.vala --pkg gio-2.0 $(GIRDIR)/Json-1.0.gir
