Add explicit copy method for arrays
https://bugzilla.gnome.org/show_bug.cgi?id=650663

--- a/vala/Makefile.am
+++ b/vala/Makefile.am
@@ -18,6 +18,7 @@ noinst_LTLIBRARIES = \
 
 libvalacore_la_VALASOURCES = \
 	valaaddressofexpression.vala \
+	valaarraycopymethod.vala \
 	valaarraycreationexpression.vala \
 	valaarraylengthfield.vala \
 	valaarraymovemethod.vala \
